Updating lab09 skeleton